--- a/maven-examples/redisExamples/pom.xml
+++ b/maven-examples/redisExamples/pom.xml
@@ -21,5 +21,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>redis.clients</groupId>
+    <artifactId>jedis</artifactId>
+    <version>2.5.2</version>
+</dependency>
   </dependencies>
 </project>
