--- a/spring-examples/springExamples/src/main/webapp/WEB-INF/web.xml
+++ b/spring-examples/springExamples/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,27 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
-</web-app>
+<?xml version="1.0" encoding="UTF-8"?>  
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"  
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee   
+    http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">  
+    <display-name></display-name>  
+      
+    <!-- 配置Spring MVC DispatcherServlet -->  
+    <servlet>  
+        <servlet-name>springExamples</servlet-name>  
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>  
+        <!-- 初始化参数 -->  
+        <load-on-startup>1</load-on-startup>  
+    </servlet>  
+  
+    <!-- 配置DispatcherServlet所需要拦截的 url -->  
+    <servlet-mapping>  
+        <servlet-name>springExamples</servlet-name>  
+        <url-pattern>/</url-pattern>  
+    </servlet-mapping>  
+  
+    <welcome-file-list>  
+        <welcome-file>index.jsp</welcome-file>  
+    </welcome-file-list>  
+  
+  
+</web-app>  
